created post.html and fixed title errors

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="/static/css/posts.css">
 
 {% extends "layout.html" %}
-{% block title %}Etusivu{% endblock %}
+{% block title %}Front Page{% endblock %}
 {% block content %}
 
 <h2>Front page</h2>
