--- a/templates/group.html
+++ b/templates/group.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="/static/css/posts.css">
+<link rel="stylesheet" href="/static/css/main.css">
 
 {% extends "layout.html" %}
-{% block title %}Etusivu{% endblock %}
+{% block title %}Group - {{ name }}{% endblock %}
 {% block content %}
 
 <h1>{{ name }}</h1>
