--- a/templates/groupCreator.html
+++ b/templates/groupCreator.html
@@ -3,13 +3,13 @@
 {% block title %}Kirjautuminen{% endblock %}
 {% block content %}
 <h2>Create group</h2>
+{{ message }} <br><br>
 <form action="/group-create" method="POST">
     <label for="group_name">Group name</label>
     <input type="name" name="group_name"> <br>
-    <label for="public">Publicity (check if public)</label>
-    <input type="checkbox" name="public" value="A"> <br>
     <label for="description">Description</label>
     <textarea type="message" name="description" rows="5" cols="85"></textarea>
     <input type="submit" value="Create group">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 {% endblock %}
