--- a/templates/logger.html
+++ b/templates/logger.html
@@ -2,6 +2,9 @@
 {% block title %}Kirjautuminen{% endblock %}
 {% block content %}
 <h2>Log in</h2>
+
+{{ message }} <br><br>
+
 <form action="/old" method="POST">
     <label for="user_id">Unique ID</label>
     <input type="text" name="user_id"> <br>
@@ -9,5 +12,5 @@
     <input type="password" name="password"> <br>
     <input type="submit" value="Log in">
 </form>
-<a href="/login">Create new account</a>
+<a href="/login:error=None">Create new account</a>
 {% endblock %}
