--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,21 @@
 {% extends "layout.html" %}
 {% block title %}Kirjautuminen{% endblock %}
 {% block content %}
+
 <h2>Kirjautuminen</h2>
+
+{{ message }}<br><br>
+
 <form action="/new" method="POST">
     <label for="username">Username</label>
     <input type="text" name="username"> <br>
     <label for="user_id">Unique ID</label>
     <input type="text" name="user_id"> <br>
-    <label for="password">Password</label>
-    <input type="password" name="password"> <br>
-    <label for="repeat password">Repeat Password</label>
-    <input type="password" name="repeat password"> <br>
+    <label for="password1">Password</label>
+    <input type="password" name="password1"> <br>
+    <label for="password2">Repeat Password</label>
+    <input type="password" name="password2"> <br>
     <input type="submit" value="Create account">
 </form>
+
 {% endblock %}
