--- a/templates/postCreator.html
+++ b/templates/postCreator.html
@@ -1,12 +1,15 @@
 {% extends "layout.html" %}
 {% block title %}Kirjautuminen{% endblock %}
 {% block content %}
+
 <h2>Create Post in</h2>
+{{ message }}<br><br>
 <form action="/group{{ group }}/post-create" method="POST" enctype="multipart/form-data">
     <label for="title">Post Title</label>
     <input type="text" name="title"> <br>
     <label for="picture">Picture (in jpg-fromat)</label>
     <input type="file" name="picture"><br>
     <input type="submit" value="Create Post">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 {% endblock %}
